probe-rs/src/debug/snapshots/probe_rs__debug__debug_info__test__nRF52833_xxAA_hardfault_from_usagefault.snap
---
source: probe-rs/src/debug/debug_info.rs
expression: stack_frames
---
- function_name: "UNWIND: Error while checking for exception context. The stack trace will not include the calling frames. : The coredump does not include the memory for address 0xe000ed28 of size 0x4"
  source_location: ~
  registers:
    - core_register:
        id: 0
        roles:
          - Core: R0
          - Argument: a1
          - Return: r1
        data_type:
          UnsignedInteger: 32
      dwarf_id: 0
      value:
        U32: 0
    - core_register:
        id: 1
        roles:
          - Core: R1
          - Argument: a2
          - Return: r2
        data_type:
          UnsignedInteger: 32
      dwarf_id: 1
      value:
        U32: 1073742080
    - core_register:
        id: 2
        roles:
          - Core: R2
          - Argument: a3
        data_type:
          UnsignedInteger: 32
      dwarf_id: 2
      value:
        U32: 1
    - core_register:
        id: 3
        roles:
          - Core: R3
          - Argument: a4
        data_type:
          UnsignedInteger: 32
      dwarf_id: 3
      value:
        U32: 85
    - core_register:
        id: 4
        roles:
          - Core: R4
        data_type:
          UnsignedInteger: 32
      dwarf_id: 4
      value:
        U32: 0
    - core_register:
        id: 5
        roles:
          - Core: R5
        data_type:
          UnsignedInteger: 32
      dwarf_id: 5
      value:
        U32: 0
    - core_register:
        id: 6
        roles:
          - Core: R6
        data_type:
          UnsignedInteger: 32
      dwarf_id: 6
      value:
        U32: 0
    - core_register:
        id: 7
        roles:
          - Core: R7
          - FramePointer
        data_type:
          UnsignedInteger: 32
      dwarf_id: 7
      value:
        U32: 536887088
    - core_register:
        id: 8
        roles:
          - Core: R8
        data_type:
          UnsignedInteger: 32
      dwarf_id: 8
      value:
        U32: 0
    - core_register:
        id: 9
        roles:
          - Core: R9
        data_type:
          UnsignedInteger: 32
      dwarf_id: 9
      value:
        U32: 0
    - core_register:
        id: 10
        roles:
          - Core: R10
        data_type:
          UnsignedInteger: 32
      dwarf_id: 10
      value:
        U32: 0
    - core_register:
        id: 11
        roles:
          - Core: R11
        data_type:
          UnsignedInteger: 32
      dwarf_id: 11
      value:
        U32: 0
    - core_register:
        id: 12
        roles:
          - Core: R12
        data_type:
          UnsignedInteger: 32
      dwarf_id: 12
      value:
        U32: 0
    - core_register:
        id: 13
        roles:
          - Core: R13
          - StackPointer
        data_type:
          UnsignedInteger: 32
      dwarf_id: 13
      value:
        U32: 536887088
    - core_register:
        id: 14
        roles:
          - Core: R14
          - ReturnAddress
        data_type:
          UnsignedInteger: 32
      dwarf_id: 14
      value:
        U32: 4294967289
    - core_register:
        id: 15
        roles:
          - Core: R15
          - ProgramCounter
        data_type:
          UnsignedInteger: 32
      dwarf_id: 15
      value:
        U32: 24798
    - core_register:
        id: 17
        roles:
          - Core: MSP
          - MainStackPointer
        data_type:
          UnsignedInteger: 32
      dwarf_id: 16
      value:
        U32: 536887088
    - core_register:
        id: 18
        roles:
          - Core: PSP
          - ProcessStackPointer
        data_type:
          UnsignedInteger: 32
      dwarf_id: 17
      value:
        U32: 0
    - core_register:
        id: 16
        roles:
          - Core: XPSR
          - ProcessorStatus
        data_type:
          UnsignedInteger: 32
      dwarf_id: 18
      value:
        U32: 16777219
    - core_register:
        id: 20
        roles:
          - Core: EXTRA
          - Other: EXTRA
        data_type:
          UnsignedInteger: 32
      dwarf_id: 19
      value:
        U32: 0
  pc:
    U32: 24798
  frame_base: ~
  is_inlined: false
  local_variables: ~
  canonical_frame_address: ~
