probe-rs/src/debug/snapshots/probe_rs__debug__debug_info__test__unwinding_in_exception_handler.snap
---
source: probe-rs/src/debug/debug_info.rs
expression: printed_backtrace
---
Frame:
 function:        __cortex_m_rt_SVCall
 source_location:
  directory: /home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src
  file: Some("main.rs")
  line: Some(26)
  column: Some(Column(5))
 frame_base:      Some(2001ffc0)
Frame:
 function:        __cortex_m_rt_SVCall_trampoline
 source_location:
  directory: /home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src
  file: Some("main.rs")
  line: Some(22)
  column: Some(Column(1))
 frame_base:      Some(2001ffc8)
Frame:
 function:        SVCall
 source_location:
None
 frame_base:      None
Frame:
 function:        __cortex_m_rt_main
 source_location:
  directory: /home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src
  file: Some("main.rs")
  line: Some(19)
  column: Some(Column(5))
 frame_base:      Some(2001fff0)
Frame:
 function:        __cortex_m_rt_main_trampoline
 source_location:
  directory: /home/dominik/code/probe-rs/probe-rs-repro/nrf/exceptions/src
  file: Some("main.rs")
  line: Some(11)
  column: Some(Column(1))
 frame_base:      Some(2001fff8)
Frame:
 function:        <unknown function @ 0x0000013c>
 source_location:
None
 frame_base:      None
Frame:
 function:        <unknown function @ 0x0000013c>
 source_location:
None
 frame_base:      None
